--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,14 @@ body {
         height: 60px;
         width: 100%;
 }
-/*Style for the comments targeted by the classes*/ 
+
+#navbar a
+  {
+
+  }
+
+
+/*Style for the comments targeted by the classes (administration homepage)*/ 
 .grey
 {
     color : grey;
@@ -53,6 +60,41 @@ body {
 {
     display : none ;
 }
+
+/*Style for the custom buttons and for the main_content*/
+
+.btn-custom {
+  background-color: hsl(0, 69%, 22%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#DB6E71", endColorstr="#d84145");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#DB6E71), to(#d84145));
+  background-image: -moz-linear-gradient(top, #DB6E71, #d84145);
+  background-image: -ms-linear-gradient(top, #DB6E71, #d84145);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #B090D1), color-stop(100%, #d84145));
+  background-image: -webkit-linear-gradient(top, #DB6E71, #d84145);
+  background-image: -o-linear-gradient(top, #DB6E71, #d84145);
+  background-image: linear-gradient(#DB6E71, #d84145);
+  border-color: #DB6E71 #d84145 hsl(0, 69%, 17%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
+}
+
+.main_content h1
+{
+  color : #d84145;
+}
+
+.main_content h2
+{
+  color : #DB6E71;
+}
+
+.main_content a
+{
+  color : #DB6E71;
+}
+
 
 
 /*Style for the callouts on the homepage*/
@@ -95,16 +137,38 @@ body {
   margin-bottom: 30px;
 }
 
-/*Style for the page Liste des chapitres*/
+/*Style for the pages Liste des chapitres et Chapitre*/
+.jumbotron.entete {
+  color:#d84145; 
+  background-image: url("nightauroran.jpg"); 
+  background-size: cover;
+}
+
 .summarychapter.row
 {
   margin-bottom: 50px;
 }
 
-.jumbotron.entete {
-  color:white; 
-  background-image: url("anchorage.jpg");
+.chaptercomments
+{
+  padding-top: 50px;
 }
+
+#comments_list, .chaptercomments .formulaire
+{
+  padding-top: 30px;
+}
+
+label
+{
+  padding-top: 15px;
+}
+
+.comment
+{
+  padding-bottom: 15px;
+}
+
 
 
 
@@ -114,7 +178,7 @@ body {
 /* Carousel base class */
 .carousel 
   {
-    height: 200px;
+    height: 1080px;
     margin-bottom: 60px;
   }
   /* Since positioning the image, we need to help out the caption */
@@ -124,19 +188,22 @@ body {
   }
   
   /* Declare heights because of positioning of img element */
-  .carousel item 
+  .carousel .item 
   {
-    height: 200px;
+    height: 1080px;
     background-color: #777;
   }
-  .carousel item > img
+  
+  .carousel-inner > .item > img
   {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100%;
-    height: 100%;
+    min-width: 100% ;
+    height: 1080px;
   }
+
+
 
   
 /* RESPONSIVE CSS
