--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,21 +33,77 @@ a{
   }
 
     
-  /*STYLE FOR THE HEADER*/
-  #logo  img {
-          width: 80px;
-          height: 60px;
-          width: 100%;
-  }
-
-  #navbar a{
+  /*STYLE FOR THE HEADERS*/
+  #navbarPublic a, #navbarAdm a  {
     color : #DB6E71;
   }
 
-  #navbar a:hover{
-    color :#f2ac57 !important;
+  #navbarPublic a:hover, #navbarAdm a:hover, #navbarPublic a:focus, #navbarAdm a:focus {
+    color :#f2ac57 ;
+    border-bottom : 1px solid #f2ac57;
   }
 
+  .navbar-fixed-top .navbar-collapse {
+    max-height: 20px !important;
+  }
+
+  #logo  img {
+    height: 50px;
+  }
+
+  #logo  {
+    margin-left: 50px;
+  }
+
+  #brand{
+    margin-top : 15px;
+    color: #f2ac57;
+    font-size: 20px;
+  }
+
+  #logo  img {
+    height: 50px;
+  }
+
+  #logo  {
+    margin-left: 50px;
+  }
+  
+  .navbar-nav {
+    margin-left: 400px;
+  }
+
+  
+
+  /*Style for the navigation bar on public pages*/
+
+    #navbarPublic {
+      margin-top : 17px;
+      font-size: 17px;
+    }
+
+    #navbarPublic .navbar-nav .active a {
+    background-color: #222222 !important;
+    }
+
+
+  /*Style for the navigation bar on administration pages*/
+    
+    #navbarAdm {
+      margin-top : 10px;
+      font-size : 13px; 
+    }
+ 
+    #navbarInvAdm, #navbarAdm .navbar-nav .active a  {
+      background-color: #584b6e;
+      border-color: #584b6e;
+    }
+
+    .navbar-btn {
+      margin: 0px 50px 0px 0px !important;
+    }
+
+   
 
   /*STYLE FOR THE CUSTOM BUTTONS AND FOR THE MAIN_CONTENT*/
 
@@ -73,11 +129,32 @@ a{
     -webkit-font-smoothing: antialiased;
   }
 
+  .btn-customBis {
+    background-color: hsl(0, 69%, 22%) !important;
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#84D9F5", endColorstr="#299CC2");
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#84D9F5), to(#299CC2));
+    background-image: -moz-linear-gradient(top, #84D9F5, #299CC2);
+    background-image: -ms-linear-gradient(top, #84D9F5, #299CC2);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #84D9F5), color-stop(100%, #299CC2));
+    background-image: -webkit-linear-gradient(top, #84D9F5, #299CC2);
+    background-image: -o-linear-gradient(top, #84D9F5, #299CC2);
+    background-image: linear-gradient(#84D9F5, #299CC2);
+    border-color: #84D9F5 #299CC2 hsl(0, 69%, 17%);
+    color: #fff !important;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  .big {
+    font-size: 25px;
+  }
+
   .main_content h1 {
     color : #d84145;
   }
 
-  .main_content h2, .main_content h3 {
+  .main_content h2, .main_content h3, .redCustom {
     color : #DB6E71;
   }
 
@@ -96,8 +173,8 @@ a{
 -------------------------------------------------- */
 
   /*STYLE FOR THE COMMENTS TARGETED BY THE CLASSES (ADMINISTRATION HOMEPAGE)*/ 
-  .grey{
-      color : grey;
+  .red{
+      color : red !important;
   }
 
   .hidden{
@@ -175,7 +252,7 @@ a{
   margin-bottom: 30px;
 }
 
-/*STYLE FOR THE PAGES RELATIVES AUX CHAPITRES (Liste des chapitres, Chapitre, Visualisation de chapitre, ajout de chapitre et modification de chapitre)
+/*STYLE FOR THE PAGES RELATING TO CHAPTERS : Liste des chapitres, Chapitre, Visualisation de chapitre, ajout de chapitre et modification de chapitre)
 -------------------------------------------------- */
 
   /*PAGE LISTE DES CHAPITRES*/
@@ -243,7 +320,14 @@ a{
     margin-top: 0px;
   }
   
-  
+
+  /*STYLE FOR THE PAGES GESTION DES CHAPITRES & GESTION DES COMMENTAIRES 
+-------------------------------------------------- */
+ table {
+   margin : 50px 0 50px 0;
+ } 
+
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 /* Styles for the smartphones*/
@@ -253,17 +337,23 @@ a{
 /* Styles for the tablets*/
 @media (min-width: 768px) 
 {
-  .navbar-brand 
+ 
+
+  #brandAdm
   {
       margin : 0 100px;
   }
+
 }
+
 
 /* Styles for the desktop computers*/
 @media (min-width: 992px) 
 {
-  .navbar-brand 
+  
+
+  #brandAdm
   {
-      margin : 0 300px;
+      margin : 0 200px;
   }
 }
