--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,8 +39,8 @@ a{
   }
 
   #navbarPublic a:hover, #navbarAdm a:hover, #navbarPublic a:focus, #navbarAdm a:focus {
-    color :#f2ac57 ;
-    border-bottom : 1px solid #f2ac57;
+    color :#BFC272 ;
+    border-bottom : 1px solid #BFC272;
   }
 
   .navbar-fixed-top .navbar-collapse {
@@ -57,7 +57,7 @@ a{
 
   #brand{
     margin-top : 15px;
-    color: #f2ac57;
+    color: #9FA16A;
     font-size: 20px;
   }
 
@@ -129,18 +129,18 @@ a{
     -webkit-font-smoothing: antialiased;
   }
 
-  .btn-customBis {
+  .btn-customTer {
     background-color: hsl(0, 69%, 22%) !important;
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#84D9F5", endColorstr="#299CC2");
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#84D9F5), to(#299CC2));
-    background-image: -moz-linear-gradient(top, #84D9F5, #299CC2);
-    background-image: -ms-linear-gradient(top, #84D9F5, #299CC2);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #84D9F5), color-stop(100%, #299CC2));
-    background-image: -webkit-linear-gradient(top, #84D9F5, #299CC2);
-    background-image: -o-linear-gradient(top, #84D9F5, #299CC2);
-    background-image: linear-gradient(#84D9F5, #299CC2);
-    border-color: #84D9F5 #299CC2 hsl(0, 69%, 17%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#BFC272", endColorstr="#299CC2");
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#BFC272), to(#9FA16A));
+    background-image: -moz-linear-gradient(top, #BFC272, #9FA16A);
+    background-image: -ms-linear-gradient(top, #BFC272, #9FA16A);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #BFC272), color-stop(100%, #9FA16A));
+    background-image: -webkit-linear-gradient(top, #BFC272, #9FA16A);
+    background-image: -o-linear-gradient(top, #BFC272, #9FA16A);
+    background-image: linear-gradient(#BFC272, #9FA16A);
+    border-color: #BFC272 #9FA16A hsl(0, 69%, 17%);
     color: #fff !important;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
     -webkit-font-smoothing: antialiased;
@@ -154,7 +154,7 @@ a{
     color : #d84145;
   }
 
-  .main_content h2, .main_content h3, .redCustom {
+  .main_content h2, .main_content h3, .light_red {
     color : #DB6E71;
   }
 
@@ -168,18 +168,22 @@ a{
     font-size: 42px;
   }
 
+  .orange{
+    color : orangered !important;
+  }
+
+  .orange_back{
+    background-color: orangered;
+  }
 
 /*STYLE FOR THE ADMINISTRATION HOMEPAGE
 -------------------------------------------------- */
 
-  /*STYLE FOR THE COMMENTS TARGETED BY THE CLASSES (ADMINISTRATION HOMEPAGE)*/ 
-  .red{
-      color : red !important;
-  }
+.stat {
+  position : relative;
+  margin-top: 50px;
+}
 
-  .hidden{
-      display : none ;
-  }
 
 
 /*STYLE FOR THE PUBLIC HOMEPAGE
@@ -252,6 +256,7 @@ a{
   margin-bottom: 30px;
 }
 
+
 /*STYLE FOR THE PAGES RELATING TO CHAPTERS : Liste des chapitres, Chapitre, Visualisation de chapitre, ajout de chapitre et modification de chapitre)
 -------------------------------------------------- */
 
@@ -323,9 +328,14 @@ a{
 
   /*STYLE FOR THE PAGES GESTION DES CHAPITRES & GESTION DES COMMENTAIRES 
 -------------------------------------------------- */
- table {
-   margin : 50px 0 50px 0;
- } 
+table {
+  margin : 50px 0 50px 0;
+} 
+
+.hidden{
+  display : none ;
+}
+
 
 
 /* RESPONSIVE CSS
