--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ a{
     #navbarAdm {
       margin-top : 10px;
       font-size : 13px; 
+      
     }
  
     #navbarInvAdm, #navbarAdm .navbar-nav .active a  {
@@ -173,7 +174,7 @@ a{
   }
 
   .orange_back{
-    background-color: orangered;
+    background-color: orangered !important;
   }
 
 /*STYLE FOR THE ADMINISTRATION HOMEPAGE
