--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,14 +47,6 @@ a{
     max-height: 20px !important;
   }
 
-  #logo  img {
-    height: 50px;
-  }
-
-  #logo  {
-    margin-left: 50px;
-  }
-
   #brand{
     margin-top : 15px;
     color: #9FA16A;
@@ -86,6 +78,19 @@ a{
     background-color: #222222 !important;
     }
 
+    #text_admin {
+      color : #B94BDE!important;
+    }
+
+    #publicMenu {
+      position : relative;
+    }
+
+    #adminOnPublic {
+      position : absolute;
+      bottom :20px;
+      right : 35px;
+    }
 
   /*Style for the navigation bar on administration pages*/
     
@@ -99,11 +104,11 @@ a{
       border-color: #584b6e;
     }
 
-    .navbar-right {
+    #menuRightAdm {
       margin: 0px 30px 0px 0px;
     }
 
-    .navbar-right .navbar-btn, .navbar-right .navbar-text {
+    #menuRightAdm .navbar-btn, #menuRightAdm .navbar-text {
       margin-top : 3px;
     }
    
