--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ html {
 body {
   position: relative;
   min-height: 100%;
+  width:100%;
+}
+
+header {
+  width:100%;
 }
 
 #content{
@@ -198,6 +203,21 @@ a{
 
 /*STYLE FOR THE PUBLIC HOMEPAGE
 -------------------------------------------------- */
+ 
+  blockquote {
+    margin-top: 20px;
+  }
+
+  /*STYLE FOR THE SYNOPSIS*/
+
+  #synopsis {
+    margin-top: 30px;
+  }
+
+  #synopsis h2 {
+    margin-bottom: 30px;
+  }
+
 
   /*STYLE FOR THE CALLOUTS ON THE HOMEPAGE*/
 
@@ -216,7 +236,7 @@ a{
   }  
 
 
-  @media only screen and (min-width : 480px){
+  @media only screen and (min-width : 767px){
     .table-row-equal {
         display: table;
         width: 100%;
@@ -236,27 +256,22 @@ a{
 
   /* Carousel base class */
   .carousel {
-      height: 1080px;
-      margin-bottom: 60px;
+      height: 900px;
     }
 
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    z-index: 10;
-  }
-  
+
   /* Declare heights because of positioning of img element */
   .carousel .item {
-    height: 1080px;
-    background-color: #777;
+    height: 900px;
+    min-width: 100%;
   }
   
   .carousel-inner > .item > img{
     position: absolute;
-    top: 0;
+    top : 0;
     left: 0;
     min-width: 100% ;
-    height: 1080px;
+    height: 1200px;
   }
 
 
@@ -391,10 +406,14 @@ table {
             right: 5px;
             bottom :0px;
         }
+
+        #navbarPublic {
+          color :white !important;
+        }
     }
 
     /* Styles for the tablets*/
-    @media (min-width: 768px) 
+    @media (min-width: 767px) 
     {
       #brand{
         position :absolute;
@@ -468,3 +487,275 @@ table {
       }
    
         }
+
+    /*STYLE FOR THE PUBLIC HOMEPAGE-------------------------------------------------- */  
+
+      /*STYLE FOR THE TITLES & THE BLOCKQUOTE*/
+        /* Styles for the smartphones*/
+        @media (max-width: 767px) 
+        {
+          h1 {
+            font-size: 26px;
+          }
+
+          h2 {
+            font-size: 24px;
+          }
+
+          blockquote {
+            position : relative;
+            font-size: 15px;
+            text-align: justify;
+          }
+
+          blockquote small {
+            position : absolute;
+            right : 50px;
+          }
+        }
+
+        /* Styles for the tablets*/
+        @media (min-width: 767px) and (max-width: 991px)
+        {
+          h1 {
+            font-size: 26px;
+          }
+
+          h2 {
+            font-size: 24px;
+          }
+
+          blockquote {
+            position : relative;
+            font-size: 17px;
+            text-align: justify;
+          }
+
+          blockquote small {
+            position : absolute;
+            right : 50px;
+          }
+        }
+
+      /* Styles for the desktop computers max width 1199px*/
+      @media (min-width: 992px) and (max-width: 1199px)
+      {
+        h1 {
+          font-size: 30px;
+        }
+
+        h2 {
+          font-size: 28px;
+        }
+
+        blockquote {
+          position : relative;
+          text-align: justify;
+        }
+
+        blockquote small {
+          position : absolute;
+          right : 100px;
+        }
+
+      }
+
+      /* Styles for the desktop computers min width 1200px*/
+      @media (min-width: 1200px) 
+      {
+        blockquote small {
+          text-align: right;
+        }
+      }
+
+    /*STYLE FOR THE CALLOUTS ON THE HOMEPAGE*/
+
+      /* Styles for screens of min-width : 767px*/
+      @media only screen and (min-width : 767px){
+        .table-row-equal {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+            border-spacing: 30px 0px;
+            word-wrap: break-word;
+        }
+        .table-row-equal .thumbnail {
+            float: none;
+            display: table-cell;
+            vertical-align: top;
+            width: 1%;
+        }
+      }
+
+      /* Styles for the smartphones*/
+      @media (max-width: 400px) 
+      {
+        .textcaption h2,  .textcaption p {
+         min-height: 10px;
+        } 
+
+        .image {
+          height: 200px;
+        }
+
+     
+      }
+
+      @media (min-width: 400px) and (max-width:550px)
+      {
+        .textcaption h2,  .textcaption p {
+         min-height: 10px;
+        } 
+
+        .image {
+          height: 300px;
+        }
+      }
+
+      @media (min-width: 551px) and (max-width:766px)
+      {
+        .textcaption h2,  .textcaption p {
+         min-height: 10px;
+        } 
+
+        .image {
+          height: 400px;
+        }
+      }
+
+      @media (min-width: 767px)
+      {
+        .textcaption  h2 {
+          font-size: 20px;
+        }
+      } 
+
+    /*STYLE FOR THE SYNOPSIS*/
+
+    /* Styles for the smartphones*/
+    @media (max-width: 767px) 
+    {
+      #synopsis p {
+        font-size: 17px;
+      }
+    }
+
+    /* Styles for the tablets*/
+    @media (min-width: 767px) and (max-width: 991px)
+    {
+      #synopsis p {
+        font-size: 19px;
+      }
+    }
+
+    /* Styles for the desktop computers max width 1199px*/
+    @media (min-width: 992px) and (max-width: 1199px)
+    {
+      #synopsis p {
+        font-size: 20px;
+      }
+    }
+
+
+
+
+    /* CUSTOMIZE THE CAROUSEL  */
+
+      /* Styles for the smartphones*/
+      @media (max-width: 767px) 
+      {
+            
+        /* Carousel base class */
+        .carousel {
+          height:400px;
+        }
+
+        .carousel h1 {
+            font-size: 30px;
+        }
+
+        .carousel p {
+          font-size: 12px;
+        }
+
+        .carousel .btn-lg {
+          font-size: 14px;
+        }
+
+        /* Declare heights because of positioning of img element */
+        .carousel .item,  .carousel-inner > .item > img {
+          height: 400px;
+        }
+
+      } 
+
+      /* Styles for the tablets*/
+      @media (min-width: 767px) and (max-width: 991px)
+      {
+          /* Carousel base class */
+          .carousel {
+            height:500px;
+          }
+
+          h1 {
+              font-size: 28px;
+          }
+
+          .carousel p {
+            font-size: 13px;
+          }
+
+          .carousel .btn-lg {
+            font-size: 14px;
+          }
+
+          /* Declare heights because of positioning of img element */
+          .carousel .item  {
+            height: 500px;
+          }
+
+          .carousel-inner > .item > img {
+            height: 600px;
+          }
+
+          /*Adjustments  */
+          .carousel-caption {
+            padding-bottom: 10px;
+          }
+
+          .carousel-indicators {
+            bottom: 0px;
+        }
+      }
+
+      /* Styles for the desktop computers max width 1199px*/
+      @media (min-width: 992px) and (max-width: 1199px)
+      {
+        /* Carousel base class */
+        .carousel {
+          height:600px;
+        }
+
+        .carousel h1 {
+          font-size: 32px;
+        }
+
+        .carousel p {
+          font-size: 16px;
+        }
+
+        .carousel .btn-lg {
+          font-size: 17px;
+        }
+
+        /* Declare heights because of positioning of img element */
+        .carousel .item  {
+          height: 600px;
+        }
+        .carousel-inner > .item > img {
+          height: 700px;
+        }
+
+      }
+
+    
