--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,8 @@ body {
 }
 
 #content{
-	padding-bottom: 150px;
+  min-height: 100%;
+  padding-bottom: 150px;
 }
 
 a{
@@ -349,6 +350,20 @@ table {
 
 .hidden{
   display : none ;
+}
+
+ /*STYLE FOR THE ERROR PAGE 
+-------------------------------------------------- */
+.message {
+  text-transform: uppercase;
+}
+
+#prevPageReturnBtn {
+  margin-top : 40px;
+}
+
+#errorJumbo {
+  margin-top : 60px;
 }
 
 /*STYLE FOR THE PAGE FORMULAIRE DE CONNEXION A L'ESPACE D'ADMINISTRATION
